--- a/jupyter/yelp_business.ipynb
+++ b/jupyter/yelp_business.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "19c81c57",
    "metadata": {},
    "outputs": [
@@ -33,15 +33,12 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pymongo in /opt/conda/lib/python3.9/site-packages (4.0)\n",
-      "Collecting yelpapi\n",
-      "  Downloading yelpapi-2.4.0-py3-none-any.whl (7.1 kB)\n",
+      "Requirement already satisfied: yelpapi in /opt/conda/lib/python3.9/site-packages (2.4.0)\n",
       "Requirement already satisfied: requests in /opt/conda/lib/python3.9/site-packages (from yelpapi) (2.26.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (2021.10.8)\n",
       "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (2.0.0)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (3.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (2021.10.8)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/conda/lib/python3.9/site-packages (from requests->yelpapi) (1.26.7)\n",
-      "Installing collected packages: yelpapi\n",
-      "Successfully installed yelpapi-2.4.0\n",
       "Requirement already satisfied: pandas in /opt/conda/lib/python3.9/site-packages (1.3.4)\n",
       "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
       "Requirement already satisfied: pytz>=2017.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (2021.3)\n",
@@ -60,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "c7583ca9",
    "metadata": {},
    "outputs": [],
@@ -78,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "70817d1d",
    "metadata": {},
    "outputs": [],
@@ -90,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "d97bea36",
    "metadata": {},
    "outputs": [
@@ -101,25 +98,7 @@
       "{'name': 'admin', 'sizeOnDisk': 102400, 'empty': False}\n",
       "{'name': 'config', 'sizeOnDisk': 110592, 'empty': False}\n",
       "{'name': 'local', 'sizeOnDisk': 81920, 'empty': False}\n",
-      "{'name': 'lookup', 'sizeOnDisk': 2244608, 'empty': False}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-8:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/lib/python3.9/threading.py\", line 973, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/opt/conda/lib/python3.9/threading.py\", line 910, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/tmp/ipykernel_199/1741592225.py\", line 7, in fetch_businesses_hourly\n",
-      "  File \"/opt/conda/lib/python3.9/site-packages/yelpapi/yelpapi.py\", line 234, in search_query\n",
-      "    return self._query(SEARCH_API_URL, **kwargs)\n",
-      "  File \"/opt/conda/lib/python3.9/site-packages/yelpapi/yelpapi.py\", line 282, in _query\n",
-      "    raise YelpAPI.YelpAPIError('{}: {}'.format(response_json['error']['code'],\n",
-      "yelpapi.yelpapi.YelpAPIError: ACCESS_LIMIT_REACHED: You've reached the access limit for this client. See instructions for requesting a higher access limit at https://www.yelp.com/developers/documentation/v3/rate_limiting\n"
+      "{'name': 'lookup', 'sizeOnDisk': 2318336, 'empty': False}\n"
      ]
     }
    ],
@@ -132,17 +111,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "d2cfbcfb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "yelp_api = YelpAPI('qeamHfaZ6J_1Fj5ZsTq6DRUL3Nsza2xdbgvoYYhz3fejiXOz6VcDkMFMkLAmSBMS_aR1OCPcE5R0uKu5ebEOmeRVC3a1VxTKW4tmLwccDtSeOqxQNGLHAWzWCs10YXYx')"
+    "API1 = 'qeamHfaZ6J_1Fj5ZsTq6DRUL3Nsza2xdbgvoYYhz3fejiXOz6VcDkMFMkLAmSBMS_aR1OCPcE5R0uKu5ebEOmeRVC3a1VxTKW4tmLwccDtSeOqxQNGLHAWzWCs10YXYx'\n",
+    "\n",
+    "API2 = 'H72x7JUBRJDCWI0SNmUpE1XVzhbmUmfFqBzatoBx4VuzQSd-9hiMcO61EALxNAFAPBhWCnHm0IYZDo5f950LdZ2Cr9v_LxUHWGNVAtTIDZRCmnQP2S6jKcskk86PYXYx'\n",
+    "\n",
+    "yelp_api = YelpAPI(API2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c8781a79",
    "metadata": {},
    "outputs": [],
@@ -154,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "a2c3bff7",
    "metadata": {},
    "outputs": [],
@@ -205,15 +188,12 @@
     "    \"hvac\",\n",
     "    \"waterheaterinstallrepair\",\n",
     "    \"blinds\",\n",
-    "]\n",
-    "\n",
-    "\n",
-    "\n"
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "29042e37",
    "metadata": {},
    "outputs": [],
@@ -248,40 +228,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b2f14887",
    "metadata": {},
    "outputs": [],
    "source": [
+    "list__businesses_documents = []\n",
+    "business_ids = set()\n",
     "\n",
-    "# list__businesses_documents = []\n",
+    "for location in locations:\n",
+    "    for x in range(6):\n",
+    "        response = yelp_api.search_query(categories=alias, location=location['value'], limit=40, offset=(x*40))\n",
     "\n",
-    "# for b_id in business_ids:\n",
-    "#     try:\n",
-    "#         response = yelp_api.business_query(id=b_id)\n",
-    "#         list__businesses_documents.append(response)\n",
-    "#     except Exception as e:\n",
-    "#         time.sleep(0.5)\n",
-    "#         response = yelp_api.business_query(id=b_id)\n",
-    "#         list__businesses_documents.append(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "5da10643",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# lookup_db = client[\"lookup\"]\n",
-    "# collection = lookup_db[\"yelp_businesses\"]\n",
-    "# collection.delete_many({})\n",
-    "# collection.insert_many(list__businesses_documents)"
+    "        for business in response['businesses']:\n",
+    "            business_ids.add(business[\"id\"])\n",
+    "\n",
+    "for b_id in business_ids:\n",
+    "    try:\n",
+    "        response = yelp_api.business_query(id=b_id)\n",
+    "        list__businesses_documents.append(response)\n",
+    "    except Exception as e:\n",
+    "        time.sleep(0.5)\n",
+    "        response = yelp_api.business_query(id=b_id)\n",
+    "        list__businesses_documents.append(response)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "5da10643",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertManyResult at 0x7f9b7976d1c0>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lookup_db = client[\"lookup\"]\n",
+    "collection = lookup_db[\"yelp_businesses\"]\n",
+    "collection.delete_many({})\n",
+    "collection.insert_many(list__businesses_documents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "d3c485eb",
    "metadata": {},
    "outputs": [],
@@ -298,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "64715b39",
    "metadata": {},
    "outputs": [],
@@ -317,17 +315,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "c082bcd4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7f5231766bc0>"
+       "<pymongo.results.InsertManyResult at 0x7f9b7974cfc0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,24 +341,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "70cc591d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "YelpAPIError",
-     "evalue": "ACCESS_LIMIT_REACHED: You've reached the access limit for this client. See instructions for requesting a higher access limit at https://www.yelp.com/developers/documentation/v3/rate_limiting",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mYelpAPIError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_199/1789371842.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mbusiness\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist__businesses_documents\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0myelp_api\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreviews_query\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbusiness\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"id\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mdf__reviews\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf__reviews\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'reviews'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.9/site-packages/yelpapi/yelpapi.py\u001b[0m in \u001b[0;36mreviews_query\u001b[0;34m(self, id, **kwargs)\u001b[0m\n\u001b[1;32m    215\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'A valid business ID (parameter \"id\") must be provided.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    216\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 217\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_query\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mREVIEWS_API_URL\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    218\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    219\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0msearch_query\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.9/site-packages/yelpapi/yelpapi.py\u001b[0m in \u001b[0;36m_query\u001b[0;34m(self, url, **kwargs)\u001b[0m\n\u001b[1;32m    280\u001b[0m         \u001b[0;31m# https://github.com/Yelp/yelp-fusion/issues/95 for more info.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    281\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m'error'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mresponse_json\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 282\u001b[0;31m             raise YelpAPI.YelpAPIError('{}: {}'.format(response_json['error']['code'],\n\u001b[0m\u001b[1;32m    283\u001b[0m                                                        response_json['error']['description']))\n\u001b[1;32m    284\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mYelpAPIError\u001b[0m: ACCESS_LIMIT_REACHED: You've reached the access limit for this client. See instructions for requesting a higher access limit at https://www.yelp.com/developers/documentation/v3/rate_limiting"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fetch yelp reviews\n",
     "\n",
@@ -368,20 +352,39 @@
     "list__review_documents = []\n",
     "\n",
     "for business in list__businesses_documents:\n",
-    "    response = yelp_api.reviews_query(id = business[\"id\"])\n",
-    "    df__reviews = df__reviews.append(pd.DataFrame(response['reviews']))\n",
-    "\n",
-    "    for review in response['reviews']:\n",
-    "        new_review = {**review, 'business_id': business[\"id\"]}\n",
-    "        list__review_documents.append(new_review)"
+    "    try:\n",
+    "        response = yelp_api.reviews_query(id = business[\"id\"])\n",
+    "        df__reviews = df__reviews.append(pd.DataFrame(response['reviews']))\n",
+    "        \n",
+    "        for review in response['reviews']:\n",
+    "            new_review = {**review, 'business_id': business[\"id\"]}\n",
+    "            list__review_documents.append(new_review)\n",
+    "    except Exception as e:\n",
+    "        time.sleep(0.5)\n",
+    "        response = yelp_api.reviews_query(id = business[\"id\"])\n",
+    "        \n",
+    "        for review in response['reviews']:\n",
+    "            new_review = {**review, 'business_id': business[\"id\"]}\n",
+    "            list__review_documents.append(new_review)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "5e74bac4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertManyResult at 0x7f9b78cb4580>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Update MongoDB\n",
     "\n",
@@ -392,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "94c948c0",
    "metadata": {},
    "outputs": [],
@@ -421,16 +424,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "e9a6fdeb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Fetch different categories\n",
-    "\n",
-    "API_KEY='H72x7JUBRJDCWI0SNmUpE1XVzhbmUmfFqBzatoBx4VuzQSd-9hiMcO61EALxNAFAPBhWCnHm0IYZDo5f950LdZ2Cr9v_LxUHWGNVAtTIDZRCmnQP2S6jKcskk86PYXYx'\n",
-    "\n",
-    "headers = {'Authorization': 'Bearer {}'.format(API_KEY)}\n",
+    "headers = {'Authorization': 'Bearer {}'.format(API2/)}\n",
     "categories_api_url = 'https://api.yelp.com/v3/categories'\n",
     "\n",
     "response = requests.get(categories_api_url, headers=headers, timeout=5)\n",
@@ -446,21 +446,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "41348f30",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7f5231bada00>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Update MongoDB\n",
     "\n",
@@ -471,42 +460,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "1f106aed",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create threads to run both methods simultaneously\n",
     "\n",
-    "Thread(target = fetch_businesses_hourly).start()\n",
-    "Thread(target = fetch_events_daily).start()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "1794cead",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'businesses': [],\n",
-       " 'total': 0,\n",
-       " 'region': {'center': {'longitude': -122.33551025390625,\n",
-       "   'latitude': 47.62541904760501}}}"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "yelp_api = YelpAPI(\"H72x7JUBRJDCWI0SNmUpE1XVzhbmUmfFqBzatoBx4VuzQSd-9hiMcO61EALxNAFAPBhWCnHm0IYZDo5f950LdZ2Cr9v_LxUHWGNVAtTIDZRCmnQP2S6jKcskk86PYXYx\")\n",
-    "resp = yelp_api.search_query(term=\"Home Services\", attributes=['hot_and_new'], location=\"seattle\", limit=40)\n",
+    "# PS: This might cause the API to exhaust and throw error as there is a limit on number of requests per day\n",
     "\n",
-    "resp"
+    "# Thread(target = fetch_businesses_hourly).start()\n",
+    "# Thread(target = fetch_events_daily).start()"
    ]
   },
   {
