--- a/jupyter/py2neo.ipynb
+++ b/jupyter/py2neo.ipynb
@@ -31,10 +31,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b7d3d349",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting py2neo\n",
+      "  Downloading py2neo-2021.2.3-py2.py3-none-any.whl (177 kB)\n",
+      "     |████████████████████████████████| 177 kB 1.9 MB/s            \n",
+      "\u001b[?25hRequirement already satisfied: pygments>=2.0.0 in /opt/conda/lib/python3.9/site-packages (from py2neo) (2.10.0)\n",
+      "Requirement already satisfied: packaging in /opt/conda/lib/python3.9/site-packages (from py2neo) (21.2)\n",
+      "Requirement already satisfied: urllib3 in /opt/conda/lib/python3.9/site-packages (from py2neo) (1.26.7)\n",
+      "Collecting pansi>=2020.7.3\n",
+      "  Downloading pansi-2020.7.3-py2.py3-none-any.whl (10 kB)\n",
+      "Requirement already satisfied: six>=1.15.0 in /opt/conda/lib/python3.9/site-packages (from py2neo) (1.16.0)\n",
+      "Requirement already satisfied: certifi in /opt/conda/lib/python3.9/site-packages (from py2neo) (2021.10.8)\n",
+      "Collecting monotonic\n",
+      "  Downloading monotonic-1.6-py2.py3-none-any.whl (8.2 kB)\n",
+      "Collecting interchange~=2021.0.4\n",
+      "  Downloading interchange-2021.0.4-py2.py3-none-any.whl (28 kB)\n",
+      "Requirement already satisfied: pytz in /opt/conda/lib/python3.9/site-packages (from interchange~=2021.0.4->py2neo) (2021.3)\n",
+      "Requirement already satisfied: pyparsing<3,>=2.0.2 in /opt/conda/lib/python3.9/site-packages (from packaging->py2neo) (2.4.7)\n",
+      "Installing collected packages: pansi, monotonic, interchange, py2neo\n",
+      "Successfully installed interchange-2021.0.4 monotonic-1.6 pansi-2020.7.3 py2neo-2021.2.3\n",
+      "Requirement already satisfied: pandas in /opt/conda/lib/python3.9/site-packages (1.3.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (2021.3)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /opt/conda/lib/python3.9/site-packages (from pandas) (1.20.3)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.9/site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n"
+     ]
+    }
+   ],
    "source": [
     "# Install required dependencies\n",
     "!pip install py2neo\n",
@@ -43,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d56a78c5",
    "metadata": {},
    "outputs": [],
@@ -57,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "574798f0",
    "metadata": {},
    "outputs": [],
@@ -68,10 +98,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5efe85d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "(No data)"
+      ],
+      "text/plain": [
+       "(No data)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Delete all Nodes and Relationships of Graph DB\n",
     "graph.run(\"MATCH (a) DETACH DELETE a\")"
@@ -79,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2f9d469b",
    "metadata": {},
    "outputs": [],
@@ -90,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f3438828",
    "metadata": {},
    "outputs": [],
@@ -101,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "eb5509f7",
    "metadata": {},
    "outputs": [],
@@ -112,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "cc881c11",
    "metadata": {},
    "outputs": [],
@@ -123,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "106afefb",
    "metadata": {},
    "outputs": [],
@@ -134,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9e4b102c",
    "metadata": {},
    "outputs": [],
@@ -147,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "cc8d8d4a",
    "metadata": {},
    "outputs": [],
@@ -161,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "6ea492af",
    "metadata": {},
    "outputs": [],
@@ -187,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ebea72ca",
    "metadata": {},
    "outputs": [],
@@ -211,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "0f8dbe47",
    "metadata": {},
    "outputs": [],
@@ -236,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "31063dac",
    "metadata": {},
    "outputs": [],
@@ -254,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "74cab3af",
    "metadata": {},
    "outputs": [],
@@ -265,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a036f3cf",
    "metadata": {},
    "outputs": [],
@@ -278,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "b1c97ea7",
    "metadata": {},
    "outputs": [],
@@ -300,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "85bcfc33",
    "metadata": {},
    "outputs": [],
@@ -314,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "887167de",
    "metadata": {},
    "outputs": [],
@@ -338,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "c1e17137",
    "metadata": {},
    "outputs": [],
@@ -356,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "1ec54cd5",
    "metadata": {},
    "outputs": [],
@@ -376,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "3bf0f480",
    "metadata": {},
    "outputs": [],
@@ -390,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "e4fd197b",
    "metadata": {},
    "outputs": [],
@@ -409,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "70e94b49",
    "metadata": {},
    "outputs": [],
